--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="polyfills-S3BTP7ME.js" type="module"></script><script src="main-TMSCEL2I.js" type="module"></script></body>
+<script src="polyfills-S3BTP7ME.js" type="module"></script><script src="main-ZVUBQEU5.js" type="module"></script></body>
 </html>
