--- a/byebuybye/index.html
+++ b/byebuybye/index.html
@@ -15,5 +15,5 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="main-SRVC7N7Q.js" type="module"></script></body>
+<script src="main-4Y3BNXJJ.js" type="module"></script></body>
 </html>
