--- a/byebuybye/index.html
+++ b/byebuybye/index.html
@@ -15,5 +15,5 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<link rel="modulepreload" href="chunk-56GSYNL6.js"><link rel="modulepreload" href="chunk-DDQ4ZNGR.js"><link rel="modulepreload" href="chunk-I25BBKAA.js"><link rel="modulepreload" href="chunk-TITNLOX4.js"><link rel="modulepreload" href="chunk-VG43LYMX.js"><link rel="modulepreload" href="chunk-52L5DIHH.js"><link rel="modulepreload" href="chunk-4Y5VCLLF.js"><script src="main-Y4GRLJH4.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-QORNORT3.js"><link rel="modulepreload" href="chunk-Q4VWBOSX.js"><link rel="modulepreload" href="chunk-T2HF554B.js"><link rel="modulepreload" href="chunk-QXHB2BIB.js"><link rel="modulepreload" href="chunk-KH7ATXE2.js"><link rel="modulepreload" href="chunk-NDTBUUH6.js"><script src="main-GVGJJQJF.js" type="module"></script></body>
 </html>
