--- a/byebuybye/index.html
+++ b/byebuybye/index.html
@@ -15,5 +15,5 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<link rel="modulepreload" href="chunk-QORNORT3.js"><link rel="modulepreload" href="chunk-Q4VWBOSX.js"><link rel="modulepreload" href="chunk-T2HF554B.js"><link rel="modulepreload" href="chunk-QXHB2BIB.js"><link rel="modulepreload" href="chunk-KH7ATXE2.js"><link rel="modulepreload" href="chunk-NDTBUUH6.js"><script src="main-GVGJJQJF.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-QORNORT3.js"><link rel="modulepreload" href="chunk-Q4VWBOSX.js"><link rel="modulepreload" href="chunk-T2HF554B.js"><link rel="modulepreload" href="chunk-QXHB2BIB.js"><link rel="modulepreload" href="chunk-KH7ATXE2.js"><link rel="modulepreload" href="chunk-NDTBUUH6.js"><script src="main-R24H4GMB.js" type="module"></script></body>
 </html>
