--- a/qr/index.html
+++ b/qr/index.html
@@ -61,8 +61,8 @@
 </head>
 <body>
 <div class="container">
-    <div id="qr-reader" style="width:500px"></div>
-    <div class="text-box" id="qr-reader-results"></div>
+    <div id="qr-reader" style="width:200px"></div>
+    <div id="qr-reader-results"></div>
 </div>
 <script>
     function docReady(fn) {
