--- a/qr/index.html
+++ b/qr/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
 <div class="container">
-    <div id="qr-reader" style="width:400px"></div>
+    <div id="qr-reader" style="width:300px"></div>
     <div id="qr-reader-results"></div>
 </div>
 <script>
@@ -83,6 +83,7 @@
                 lastResult = decodedText;
                 console.log(`Scan result ${decodedText}`, decodedResult);
             }
+            resultContainer.innerHTML = `<p>Last result: ${decodedText}</p><p>Result count: ${countResults}</p>`;
         }
 
         var html5QrcodeScanner = new Html5QrcodeScanner(
