--- a/qr/index.html
+++ b/qr/index.html
@@ -5,64 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scanner</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-        }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 20px;
-        }
-
-        .text-box {
-            width: 400px;
-            min-height: 150px;
-            padding: 20px;
-            border: 2px solid #333;
-            border-radius: 8px;
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        input[type="text"] {
-            width: 400px;
-            padding: 12px;
-            font-size: 16px;
-            border: 2px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-
-        button {
-            padding: 12px 40px;
-            font-size: 16px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        #qr-reader > div:first-of-type > img{
-            display: none !important;
-            
-        }
+        body{margin:0;padding:0;display:flex;justify-content:center;align-items:center;min-height:100vh;font-family:Arial,sans-serif;background-color:#f0f0f0}.container{display:flex;flex-direction:column;align-items:center;gap:20px}input[type=text]{width:400px;padding:12px;font-size:16px;border:2px solid #ccc;border-radius:4px;box-sizing:border-box}button{padding:12px 40px;font-size:16px;background-color:#007bff;color:#fff;border:none;border-radius:4px;cursor:pointer;transition:background-color .3s}button:hover{background-color:#0056b3}#qr-reader>div:first-of-type>img{display:none!important}
     </style>
-    <script src="html5-qrcode.min.js"></script>
+    <script src="qr.min.js"></script>
 </head>
 <body>
 <div class="container">
@@ -86,9 +31,10 @@
             if (decodedText !== lastResult) {
                 ++countResults;
                 lastResult = decodedText;
+                // Folyamatosan is lehet, tévedtem, már nem kell interakció, iOS-en működik
                 console.log(`Scan result ${decodedText}`, decodedResult);
             }
-            resultContainer.innerHTML = `<p>Last result: ${decodedText}</p><p>Result count: ${countResults}</p>`;
+            resultContainer.innerHTML = `<p>Utolsó scan: ${decodedText}</p><p>Result count: ${countResults}</p>`;
         }
 
         var html5QrcodeScanner = new Html5QrcodeScanner(
